--- a/hmwrk.css
+++ b/hmwrk.css
@@ -20,3 +20,16 @@ h1 {
 p {
     font-size: 1.5em;
 }
+
+.iframes-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* This makes it take up the full screen height */
+}
+
+iframe {
+    width: 300px;
+    height: 200px;
+    border-radius: 10px;
+}
